<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rl_cast_console"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black"
    android:visibility="visible">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_cast_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/player_cast_title"
            android:textColor="@android:color/white"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tv_cast_describe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text=""
            android:textColor="#BABABA"
            android:textSize="12sp" />

        <LinearLayout
            android:id="@+id/ll_cast_fail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:visibility="gone">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/player_cast_fail_disconnect"
                android:textColor="#BABABA"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/tv_cast_reset"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/player_cast_reconnect"
                android:textColor="#FF3140"
                android:textSize="12sp" />

        </LinearLayout>

        <TextView
            android:id="@+id/tv_cast_exit"
            android:layout_width="170dp"
            android:layout_height="37dp"
            android:layout_marginTop="19dp"
            android:background="@drawable/player_cast_exit"
            android:gravity="center"
            android:text="@string/player_cast_exit"
            android:textColor="@android:color/white"
            android:textSize="15sp" />
    </LinearLayout>


    <ImageView
        android:id="@+id/iv_cast_play"
        android:layout_width="18dp"
        android:layout_height="18dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="35dp"
        android:src="@drawable/ic_player_pause" />

    <LinearLayout
        android:id="@+id/ll_cast_progress"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_alignParentBottom="true"
        android:background="#1e1e1e"
        android:gravity="center_vertical">

        <TextView
            android:id="@+id/tv_cast_current_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:gravity="center"
            android:text="@string/player_default_time"
            android:textColor="@android:color/white"
            android:textSize="12sp" />

        <SeekBar
            android:id="@+id/cast_seek_bar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1.0"
            android:background="@null"
            android:max="100"
            android:maxHeight="1dp"
            android:minHeight="1dp"
            android:paddingLeft="12dp"
            android:paddingTop="8dp"
            android:paddingRight="12dp"
            android:paddingBottom="8dp"
            style="@style/player_dot_seek_bar_style"
            android:paddingStart="0dp"
            android:paddingEnd="0dp"
            android:progress="0"
            android:secondaryProgress="0"
            />


        <TextView
            android:id="@+id/tv_cast_duration_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="12dp"
            android:gravity="center"
            android:text="@string/player_default_time"
            android:textColor="@android:color/white"
            android:textSize="12sp" />
    </LinearLayout>
</RelativeLayout>