<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#B3000000">


    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_gravity="center_vertical"
        >

        <ImageView
            android:id="@+id/iv_left_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="14dp"
            android:layout_marginBottom="-5dp"
            android:src="@mipmap/player_ic_gesture_left_a" />

        <ImageView
            android:id="@+id/iv_left_gesture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/iv_left_up"
            android:layout_marginBottom="5dp"
            android:layout_toEndOf="@+id/iv_left_up"
            android:src="@mipmap/player_ic_gesture_left" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/iv_left_up"
            android:maxEms="6"
            android:text="@string/player_guide_left_text"
            android:textColor="@android:color/white"
            android:textSize="12sp" />
    </RelativeLayout>


    <LinearLayout
        android:id="@+id/ll_guide_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_gravity="center"
        android:orientation="vertical"
        >

        <ImageView
            android:id="@+id/iv_gesture_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="24dp"
            android:minHeight="24dp"
            android:src="@mipmap/player_ic_gesture_m_speed"
           />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:src="@mipmap/player_ic_gesture_h"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:maxEms="6"
            android:text="@string/player_guide_middle_text"
            android:textColor="@android:color/white"
            android:textSize="12sp" />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="30dp"
        android:layout_gravity="right|center"
        tools:ignore="RtlHardcoded">


        <ImageView
            android:id="@+id/iv_right_down"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_alignEnd="@+id/tv_right_tips"
            android:layout_marginEnd="14dp"
            android:layout_marginBottom="5dp"
            android:src="@mipmap/player_ic_gesture_right_a"
           />

        <ImageView
            android:id="@+id/iv_right_gesture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/iv_right_down"
            android:layout_marginBottom="10dp"
            android:src="@mipmap/player_ic_gesture_right"
            android:layout_toStartOf="@+id/iv_right_down" />

        <TextView
            android:id="@+id/tv_right_tips"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxEms="6"
            android:gravity="right"
            android:text="@string/player_guide_right_text"
            android:textColor="@android:color/white"
            android:textSize="12sp"
            android:layout_below="@+id/iv_right_down"
            />
    </RelativeLayout>

    <TextView
        android:id="@+id/tv_close"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_gravity="bottom|center_horizontal"
        android:layout_marginBottom="21dp"
        android:background="@drawable/player_player_guide_close"
        android:gravity="center"
        android:minWidth="80dp"
        android:text="@string/player_guide_know"
        android:textColor="@android:color/white"
        android:textSize="12sp"
        android:visibility="visible" />


</FrameLayout>